--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -10,7 +10,7 @@
         <ul class="category-container">
             {% for category in site.categories %}
                 <li>
-                    <a href="javascript:;" class="{{ category | first | downcase }}">
+                    <a href="/" class="{{ category | first | downcase }}">
                         {{ category | first | upcase }}
                     </a>
                 </li>
