--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -35,5 +35,14 @@ img
 .mt-5
   margin-top: 5em!important
 
+.mr-1
+  margin-right: 1em!important
+
+.pb-2
+  padding-bottom: 2em!important
+
+.pb-3
+  padding-bottom: 3em!important
+
 .thumbnail
   width: 100%
