--- a/static/css/partial/_post-detail--text.sass
+++ b/static/css/partial/_post-detail--text.sass
@@ -1,4 +1,4 @@
-.text-post
+.post-detail--text
   .contents-wrapper
     padding: $padding--contents-wrapper-y ($padding--contents-wrapper-x / 2)
 
@@ -7,3 +7,11 @@
       background: $background-color--main-section
       border: 1px solid #eee
       border-radius: 5px
+
+      .post-title
+        text-align: center
+
+      .post-date
+        text-align: center
+        color: #736b63
+        font-size: .78em
