--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,29 +5,44 @@
         {% include navigation-bar.html %}
 
         <div class="contents-wrapper">
-            <section class="latest-post">
+            <section class="pb-3">
                 <h2 class="section-title">따끈따끈한 글이에요</h2>
-                <ul class="post-list mt-3">
-                    {% for post in site.posts %}
+                <ul class="post-list thumbnail mt-3">
+                    {% for post in site.posts limit: 3 %}
                         <li>
                             <a href="{{ post.url }}" class="thumbnail-wrapper">
                                 <span class="category-badge">
                                     {{ post.categories | first | upcase }}
                                 </span>
 
-                                <img src="{{ post.thumbnail }}" class="thumbnail" onerror="this.src='https://miro.medium.com/max/1400/1*KOAfAOQ9FwAp9i2muTkGWw.png'" />
+                                <img src="{{ post.thumbnail | relative_url }}" class="thumbnail" onerror="this.src='https://miro.medium.com/max/1400/1*KOAfAOQ9FwAp9i2muTkGWw.png'" />
                             </a>
                             <p class="date">{{ post.date | date: "%Y.%m.%d " }}</p>
                             <a href="{{ post.url }}" class="title">
                                 {{ post.title }}
                             </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </section>
 
-                            <div class="mt-2">
+            <section class="mt-3 pb-3">
+                <h2 class="section-title">인기있는 글이에요</h2>
+                <ul class="post-list text mt-4">
+                    {% for post in site.posts limit: 6 %}
+                        <li>
+                            <a href="{{ post.url }}" class="title">
+                                <span class="category-badge mr-1">
+                                    {{ post.categories | first | upcase }}
+                                </span>
+                                {{ post.title }}
+                            </a>
+                            <div class="mt-1">
                                 {% for tag in post.tags limit: 4 %}
-                                    <span class="tag"># {{ tag }} </span>
+                                <span class="tag"># {{ tag }} </span>
                                 {% endfor %}
                                 {% if post.tags.size > 4 %}
-                                    <i class="tag-more"></i>
+                                <i class="tag-more"></i>
                                 {% endif %}
                             </div>
                         </li>
