--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,12 +6,12 @@
 
         <div class="contents-wrapper">
             <section>
-                <h2>{{ page.title }}</h2>
-                <div>
+                <h2 class="post-title">{{ page.title }}</h2>
+                <p class="post-date">{{ page.date | date: '%Y.%m.%d' }}</p>
+                <div class="post-content mt-4">
                     {{ page.content }}
                 </div>
             </section>
         </div>
     </body>
 </html>
-
