--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -46,3 +46,18 @@ img
 
 .thumbnail
   width: 100%
+
+.icon
+  font-style: normal
+
+  &.github
+    font-family: 'Font Awesome 5 Brands'
+    &:before
+      content: '\f09b'
+
+  &.email
+    font-family: 'Font Awesome 5 Free'
+    font-weight: 900
+
+    &:before
+      content: '\f658'
