--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -50,8 +50,12 @@
 
 
   .profile-container
-    color: $font-color--nav-profile-link
     padding: 0
     display: flex
     justify-content: center
     align-items: center
+
+    a
+      margin: 0 .5em
+      .icon
+        color: $font-color--nav-profile-link
