--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -9,8 +9,8 @@ $background-color--main-post-badge: #dcd0c5
 
 // font color
 $font-color--nav-title: #fffcf9
-$font-color--nav-category: #fffcf9
-$font-color--nav-profile-link: #fffaf5
+$font-color--nav-category: #fffffff7
+$font-color--nav-profile-link: #fffaf5bd
 $font-color--default: #291919
 $font-color--main-post-date: #736b63
 $font-color--main-post-tag: #635d56
