extract font cloor

--- a/static/css/partial/_post-detail--text.sass
+++ b/static/css/partial/_post-detail--text.sass
@@ -13,5 +13,5 @@
 
       .post-date
         text-align: center
-        color: #736b63
+        color: $font-color--default-post-date
         font-size: .78em
