--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -6,5 +6,5 @@
 @import 'base';
 @import 'navigation-bar';
 
-@import 'main';
-@import 'post-detail--text';
+@import 'post--base';
+@import 'post--list';
