--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -10,7 +10,7 @@
     padding: 0 2em
     margin: 0
 
-    &.profile
+    &.footer
       display: flex
       justify-content: center
       align-items: center
