--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -2,7 +2,7 @@
 $font-family--default: 'InfinitySans'
 
 // background color
-$background-color--default: #fffcf9
+$background-color--default: #fffdfc
 $background-color--navigation-bar: #f67e7e
 $background-color--main-section: #ffffffbd
 $background-color--main-post-badge: #dcd0c5
