--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -17,7 +17,7 @@
             {% endfor %}
         </ul>
     </section>
-    <section class="profile">
+    <section class="footer">
         <div class="profile-container">
             {% for profile in site.profile %}
                 <a href="{{ profile | last }}" target="_blank" >
