style class change

--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -1,5 +1,5 @@
 .navigation-bar
-  background: $background-color--navigation-bar
+  background: $background-color--nav
   font-weight: bold
   text-align: center
   padding: 0
