--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -2,19 +2,20 @@
 $font-family--default: 'InfinitySans'
 
 // background color
-$background-color--default: #fffdfc
-$background-color--navigation-bar: #f67e7e
-$background-color--main-section: #ffffffbd
-$background-color--main-post-badge: #dcd0c5
+$background-color--default: #fffcf5
+$background-color--nav: #f67e7e
+$background-color--section: #ffffffbd
+$background-color--post-badge: #dcd0c5
 
 // font color
 $font-color--nav-title: #fffcf9
 $font-color--nav-category: #fffffff7
 $font-color--nav-profile-link: #fffaf5bd
 $font-color--default: #291919
-$font-color--default-post-date: #736b63
-$font-color--main-post-tag: #635d56
-$font-color--main-post-badge: #6b6055
+
+$font-color--post-date: #736b63
+$font-color--post-tag: #635d56
+$font-color--post-badge: #6b6055
 
 // border color
 $border-color--thumbnail: #0000000d
