--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,18 +6,21 @@
 
         <div class="contents-wrapper">
             <section class="pb-3">
-                <h2 class="section-title">따끈따끈한 글이에요</h2>
-                <ul class="post-list thumbnail mt-3">
+                <h2 class="section-title">
+                    따끈따끈한 글이에요
+                </h2>
+                <ul class="post-container thumbnail mt-3">
                     {% for post in site.posts limit: 3 %}
                         <li>
                             <a href="{{ post.url }}" class="thumbnail-wrapper">
-                                <span class="category-badge">
-                                    {{ post.categories | first | upcase }}
-                                </span>
-
                                 <img src="{{ post.thumbnail | relative_url }}" class="thumbnail" onerror="this.src='https://miro.medium.com/max/1400/1*KOAfAOQ9FwAp9i2muTkGWw.png'" />
                             </a>
-                            <p class="date">{{ post.date | date: "%Y.%m.%d " }}</p>
+                            <div class="additional-info-wrapper">
+                                <p class="category-badge">
+                                    {{ post.categories | first | upcase }}
+                                </p>
+                                <p class="date">{{ post.date | date: "%Y.%m.%d " }}</p>
+                            </div>
                             <a href="{{ post.url }}" class="title">
                                 {{ post.title }}
                             </a>
@@ -28,7 +31,7 @@
 
             <section class="mt-3 pb-3">
                 <h2 class="section-title">인기있는 글이에요</h2>
-                <ul class="post-list text mt-4">
+                <ul class="post-container text mt-4">
                     {% for post in site.posts limit: 6 %}
                         <li>
                             <a href="{{ post.url }}" class="title">
