--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -18,7 +18,7 @@ img
 
 .contents-wrapper
   overflow: scroll
-  padding: 3em 0
+  padding: $padding--contents-wrapper-x $padding--contents-wrapper-y
 
 .mt-1
   margin-top: 1em!important
@@ -44,8 +44,10 @@ img
 .pb-3
   padding-bottom: 3em!important
 
-.thumbnail
+img.thumbnail
   width: 100%
+  border-radius: 20px
+  border: 1px solid #eee
 
 .icon
   font-style: normal
