--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -3,7 +3,7 @@
     color: $font-color--post-date
     font-size: .8em
 
-  .category-badge
+  .category-badge, .category
     font-size: .78em
 
   .tag
