style class change

--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -3,8 +3,13 @@
     color: $font-color--post-date
     font-size: .8em
 
-  .category-badge, .category
+  .category-badge
     font-size: .78em
+
+  .category
+    color: #ff9e22
+    font-size: .75em
+    font-weight: 600
 
   .tag
     font-size: .88em
