--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@
         {% include navigation-bar.html %}
 
         <div class="contents-wrapper">
-            <section class="pb-3">
+            <section>
                 <h2 class="section-title">
                     따끈따끈한 글이에요
                 </h2>
@@ -30,7 +30,7 @@
                 </ul>
             </section>
 
-            <section class="mt-1 pb-3">
+            <section class="mt-3">
                 <h2 class="section-title">인기있는 글이에요</h2>
                 <ul class="post-container text">
                     {% for post in site.posts limit: 6 %}
