--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -4,10 +4,15 @@
     font-size: .8em
 
   .category-badge
-    font-size: .78em
+    color: $key-color--post-category
+    font-size: .75em
+    font-weight: 600
+    margin-right: .5em
+    padding: .1em 1em
+    border: 1px solid $key-color--post-category
 
   .category
-    color: #ff9e22
+    color: $key-color--post-category
     font-size: .75em
     font-weight: 600
 
