--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -4,7 +4,7 @@ $font-family--default: 'InfinitySans'
 // background color
 $background-color--default: #fffcf5
 $background-color--nav: #f67e7e
-$background-color--section: #ffffffbd
+$background-color--post-container: #fffefb
 $background-color--post-badge: #dcd0c5
 
 // font color
@@ -18,8 +18,13 @@ $font-color--post-tag: #635d56
 $font-color--post-badge: #6b6055
 
 // border color
-$border-color--thumbnail: #0000000d
+$border-color--thumbnail: #eee
+$border-color--post-container: #f5f5f5
 
 // padding
 $padding--contents-wrapper-x: 3em
 $padding--contents-wrapper-y: 2em
+
+// key color
+$key-color--post-category: #ff9e22
+$key-color--post-container: #ffc883
