--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -47,7 +47,7 @@ img
 img.thumbnail
   width: 100%
   border-radius: 20px
-  border: 1px solid #eee
+  border: 1px solid $border-color--thumbnail
 
 .icon
   font-style: normal
