--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -6,8 +6,8 @@
 
     section
       .post-container
-        background: #fffefb
-        border: 1px solid #f5f5f5
+        background: $background-color--post-container
+        border: 1px solid $border-color--post-container
         padding: 2em 1.5em
         position: relative
 
@@ -16,7 +16,7 @@
           position: absolute
           top: 0
           left: 0
-          border: 2px solid #ffc883
+          border: 2px solid $key-color--post-container
           width: 10%
 
         .additional-info-wrapper
@@ -42,6 +42,9 @@
         &.text
           li
             padding-bottom: 2em
+
+            &:last-child
+              padding: 0
 
 
 
