style class change

--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -19,3 +19,7 @@
   .tag
     font-size: .88em
     color: $font-color--post-tag
+    padding-left: .8em
+
+    &:first-child
+      padding-left: 0
