style class change

--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -20,6 +20,9 @@ img
   overflow: scroll
   padding: $padding--contents-wrapper-y $padding--contents-wrapper-x
 
+.section-title
+  color: $font-color--section-title
+
 .mt-1
   margin-top: 1em!important
 
