--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -2,20 +2,19 @@
 $font-family--default: 'InfinitySans'
 
 // background color
-$background-color--default: #fffcf5
-$background-color--nav: #f67e7e
-$background-color--post-container: #fffefb
-$background-color--post-badge: #dcd0c5
+$background-color--default: #feffff
+$background-color--nav: #5a819e
+$background-color--post-container: #ffffff
 
 // font color
+$font-color--default: #161c21
 $font-color--nav-title: #fffcf9
 $font-color--nav-category: #fffffff7
 $font-color--nav-profile-link: #fffaf5bd
-$font-color--default: #291919
+$font-color--section-title: #292c2f
 
-$font-color--post-date: #736b63
-$font-color--post-tag: #635d56
-$font-color--post-badge: #6b6055
+$font-color--post-date: #77848e
+$font-color--post-tag: #384e5f
 
 // border color
 $border-color--thumbnail: #eee
@@ -26,5 +25,5 @@ $padding--contents-wrapper-x: 3em
 $padding--contents-wrapper-y: 2em
 
 // key color
-$key-color--post-category: #ff9e22
-$key-color--post-container: #ffc883
+$key-color--post-category: #445f73
+$key-color--post-container: #374550
