style class change

--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -14,7 +14,7 @@ $font-color--nav-profile-link: #fffaf5bd
 $font-color--section-title: #292c2f
 
 $font-color--post-date: #77848e
-$font-color--post-tag: #384e5f
+$font-color--post-tag: #5f6b75
 
 // border color
 $border-color--thumbnail: #eee
