--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -2,19 +2,19 @@
 $font-family--default: 'InfinitySans'
 
 // background color
-$background-color--default: #feffff
-$background-color--nav: #5a819e
+$background-color--default: #fffefe
+$background-color--nav: #cd475b
 $background-color--post-container: #ffffff
 
 // font color
-$font-color--default: #161c21
-$font-color--nav-title: #fffcf9
+$font-color--default: #4d4a40
+$font-color--nav-title: #fff
 $font-color--nav-category: #fffffff7
 $font-color--nav-profile-link: #fffaf5bd
-$font-color--section-title: #292c2f
+$font-color--section-title: #514447
 
-$font-color--post-date: #77848e
-$font-color--post-tag: #5f6b75
+$font-color--post-date: #928794
+$font-color--post-tag: #928794
 
 // border color
 $border-color--thumbnail: #eee
@@ -25,5 +25,5 @@ $padding--contents-wrapper-x: 3em
 $padding--contents-wrapper-y: 2em
 
 // key color
-$key-color--post-category: #445f73
-$key-color--post-container: #374550
+$key-color--post-category: #766c77
+$key-color--post-container: #746468
