--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -4,7 +4,7 @@
   text-align: center
   padding: 0
   display: grid
-  grid-template-rows: 25% auto 10%
+  grid-template-rows: auto 10%
 
   section
     padding: 0 2em
