--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -3,12 +3,13 @@
   font-weight: bold
   text-align: center
   padding: 0
-  display: grid
-  grid-template-rows: auto 10%
 
   section
     padding: 0 2em
     margin: 0
+
+    &:first-child
+      height: 90vh
 
     &.footer
       display: flex
