--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -4,12 +4,12 @@
     font-size: .8em
 
   .category-badge
-    color: $key-color--post-category
+    color: $font-color--post-category-badge
     font-size: .75em
     font-weight: 600
     margin-right: .5em
     padding: .1em 1em
-    border: 1px solid $key-color--post-category
+    background: $key-color--post-category
 
   .category
     color: $key-color--post-category
