--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -13,8 +13,9 @@ $font-color--nav-category: #fffffff7
 $font-color--nav-profile-link: #fffaf5bd
 $font-color--section-title: #514447
 
-$font-color--post-date: #928794
+$font-color--post-date: #89808c
 $font-color--post-tag: #928794
+$font-color--post-category-badge: #fff
 
 // border color
 $border-color--thumbnail: #eee
@@ -25,5 +26,5 @@ $padding--contents-wrapper-x: 3em
 $padding--contents-wrapper-y: 2em
 
 // key color
-$key-color--post-category: #766c77
+$key-color--post-category: #806d72
 $key-color--post-container: #746468
