--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,7 +7,7 @@
         <div class="contents-wrapper">
             <section>
                 <h2 class="section-title">
-                    따끈따끈한 글이에요
+                    Latest Posts
                 </h2>
                 <ul class="post-container thumbnail">
                     {% for post in site.posts limit: 3 %}
@@ -29,7 +29,7 @@
             </section>
 
             <section class="mt-3">
-                <h2 class="section-title">인기있는 글이에요</h2>
+                <h2 class="section-title">Populary Posts</h2>
                 <ul class="post-container text">
                     {% for post in site.posts limit: 6 %}
                         <li>
