--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -3,18 +3,18 @@ $font-family--default: 'InfinitySans'
 
 // background color
 $background-color--default: #fffefe
-$background-color--nav: #cd475b
+$background-color--nav: #f86041
 $background-color--post-container: #ffffff
 
 // font color
-$font-color--default: #4d4a40
+$font-color--default: #23190f
 $font-color--nav-title: #fff
 $font-color--nav-category: #fffffff7
 $font-color--nav-profile-link: #fffaf5bd
-$font-color--section-title: #514447
+$font-color--section-title: #3a250f
 
-$font-color--post-date: #89808c
-$font-color--post-tag: #928794
+$font-color--post-date: #757069
+$font-color--post-tag: #67635d
 $font-color--post-category-badge: #fff
 
 // border color
@@ -26,5 +26,5 @@ $padding--contents-wrapper-x: 3em
 $padding--contents-wrapper-y: 2em
 
 // key color
-$key-color--post-category: #806d72
-$key-color--post-container: #746468
+$key-color--post-category: #ffa646
+$key-color--post-container: #ffa646
