--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -9,10 +9,10 @@
     font-weight: 600
     margin-right: .5em
     padding: .1em 1em
-    background: $key-color--post-category
+    background: $key-color--default
 
   .category
-    color: $key-color--post-category
+    color: $key-color--default
     font-size: .75em
     font-weight: 600
 
