--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -1,10 +1,13 @@
 // font-family
 $font-family--default: 'InfinitySans'
+$font-family--icon: 'Font Awesome 5 Free'
 
 // background color
 $background-color--default: #fffefe
 $background-color--nav: #f86041
 $background-color--post-container: #ffffff
+$background-color--file: #210d09
+$background-color--blockquote: #f9f5f2
 
 // font color
 $font-color--default: #23190f
@@ -26,4 +29,4 @@ $padding--contents-wrapper-x: 3em
 $padding--contents-wrapper-y: 2em
 
 // key color
-$key-color--post-category: #ffa646
+$key-color--default: #ffa646
