--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -8,11 +8,20 @@
         background: $background-color--file
         border: 1px solid #eee
         padding: .5em 0
-        color: #fff
+        color: #dadcf3
 
-    .language-html
-      code
-        line-height: 1em
+      .language-yaml
+        .na, .pi
+          color: #ff5722
+
+      .language-html
+        code
+          line-height: 1em
+
+        .cp, .nt
+          color: #ffbf00
+        .s
+          color: #cddc39
 
     .stepper
       .title
