--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -15,6 +15,7 @@ $font-color--nav-title: #fff
 $font-color--nav-category: #fffffff7
 $font-color--nav-profile-link: #fffaf5bd
 $font-color--section-title: #3a250f
+$font-color--post-content: #4c433a
 
 $font-color--post-date: #757069
 $font-color--post-tag: #67635d
