--- a/static/css/partial/_variable.sass
+++ b/static/css/partial/_variable.sass
@@ -20,6 +20,8 @@ $font-color--post-content: #4c433a
 $font-color--post-date: #757069
 $font-color--post-tag: #67635d
 $font-color--post-category-badge: #fff
+$font-color--post-step-title: #fff1e3
+$font-color--post-info: #948473
 
 // border color
 $border-color--thumbnail: #eee
