--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -6,6 +6,9 @@
       text-align: left
       color: $font-color--post-content
 
+    .thumbnail
+      border-radius: 0
+
     code
       line-height: 2em
 
