--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -1,5 +1,5 @@
 .navigation-bar
-  background: $background-color--nav
+  background: var(--background-color--nav)
   font-weight: bold
   text-align: center
   padding: 0
@@ -19,7 +19,7 @@
 
   .title
     a
-      color: $font-color--nav-title
+      color: var(--font-color--nav-title)
       font-size: 2em
       padding: 0
       margin: 0
@@ -34,7 +34,7 @@
 
     a
       font-size: 1.6em
-      color: $font-color--nav-category
+      color: var(--font-color--nav-category)
       opacity: 0.8
       display: flex
       justify-content: center
@@ -59,4 +59,4 @@
     a
       margin: 0 .5em
       .icon
-        color: $font-color--nav-profile-link
+        color: var(--font-color--nav-profile-link)
