--- a/static/css/partial/_post--base.sass
+++ b/static/css/partial/_post--base.sass
@@ -1,24 +1,24 @@
 [class^=post-]
   .date
-    color: $font-color--post-date
+    color: var(--font-color--post-date)
     font-size: .8em
 
   .category-badge
-    color: $font-color--post-category-badge
+    color: var(--font-color--post-category-badge)
     font-size: .75em
     font-weight: 600
     margin-right: .5em
     padding: .1em 1em
-    background: $key-color--default
+    background: var(--key-color--default)
 
   .category
-    color: $key-color--default
+    color: var(--key-color--default)
     font-size: .75em
     font-weight: 600
 
   .tag
     font-size: .88em
-    color: $font-color--post-tag
+    color: var(--font-color--post-tag)
     padding-left: .8em
 
     &:first-child
