--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
-    <body class="{{ page.layout }} container">
+    <body class="{{ site.custom-theme }} {{ page.layout }} container">
         {% include navigation-bar.html %}
 
-        <div class="contents-wrapper post-detail">
+        <div class="post-detail contents-wrapper">
             <h2 class="title">{{ page.title }}</h2>
             <p class="date">{{ page.date | date: '%Y.%m.%d' }}</p>
             <div class="post-content mt-5">
