--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -1,71 +1,71 @@
 body
-  font-family: $font-family--default
+  font-family: var(--font-family--default)
   height: 100vh
   margin: 0
-  background: $background-color--default
-  color: $font-color--default
+  background: var(--background-color--default)
+  color: var(--font-color--default)
 
-a
-  color: $font-color--default
-  text-decoration: none
+  a
+    color: var(--font-color--default)
+    text-decoration: none
 
-img
-  max-width: 100%
+  img
+    max-width: 100%
 
-.container
-  display: grid
-  grid-template-columns: 18em auto
+  &.container
+    display: grid
+    grid-template-columns: 18em auto
 
-.contents-wrapper
-  overflow: scroll
-  padding: $padding--contents-wrapper-y $padding--contents-wrapper-x
+  .contents-wrapper
+    overflow: scroll
+    padding: var(--padding--contents-wrapper-y) var(--padding--contents-wrapper-x)
 
-.section-title
-  color: $font-color--section-title
+  .section-title
+    color: var(--font-color--section-title)
 
-.mt-1
-  margin-top: 1em!important
+  .mt-1
+    margin-top: 1em!important
 
-.mt-2
-  margin-top: 2em!important
+  .mt-2
+    margin-top: 2em!important
 
-.mt-3
-  margin-top: 3em!important
+  .mt-3
+    margin-top: 3em!important
 
-.mt-4
-  margin-top: 4em!important
+  .mt-4
+    margin-top: 4em!important
 
-.mt-5
-  margin-top: 5em!important
+  .mt-5
+    margin-top: 5em!important
 
-.mb-4
-  margin-bottom: 4em!important
+  .mb-4
+    margin-bottom: 4em!important
 
-.mr-1
-  margin-right: 1em!important
+  .mr-1
+    margin-right: 1em!important
 
-.pb-2
-  padding-bottom: 2em!important
+  .pb-2
+    padding-bottom: 2em!important
 
-.pb-3
-  padding-bottom: 3em!important
+  .pb-3
+    padding-bottom: 3em!important
 
-img.thumbnail
-  width: 100%
-  border-radius: 20px
-  border: 1px solid $border-color--thumbnail
+  img.thumbnail
+    width: 100%
+    border-radius: 20px
+    border: 1px solid var(--border-color--thumbnail)
 
-.icon
-  font-style: normal
+  .icon
+    font-style: normal
 
-  &.github
-    font-family: 'Font Awesome 5 Brands'
-    &:before
-      content: '\f09b'
+    &.github
+      font-family: 'Font Awesome 5 Brands'
+      &:before
+        content: '\f09b'
 
-  &.email
-    font-family: 'Font Awesome 5 Free'
-    font-weight: 900
+    &.email
+      font-family: 'Font Awesome 5 Free'
+      font-weight: 900
 
-    &:before
-      content: '\f658'
+      &:before
+        content: '\f658'
