--- a/static/css/partial/_font.sass
+++ b/static/css/partial/_font.sass
@@ -1,3 +1,5 @@
+$font-family--default: 'InfinitySans'
+
 @font-face
   font-family: $font-family--default
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-RegularA1.woff') format('woff')
@@ -9,5 +11,3 @@
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/InfinitySans-CondBoldA1.woff') format('woff')
   font-weight: bold
   font-style: normal
-
-
