--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -6,8 +6,8 @@
 
     section
       .post-container
-        background: $background-color--post-container
-        border: 1px solid $border-color--post-container
+        background: var(--background-color--post-container)
+        border: 1px solid var(--border-color--post-container)
         padding: 2em 1.5em
         position: relative
 
