--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -33,6 +33,11 @@
         .s
           color: #cddc39
 
+      .language-plaintext
+        font-weight: bold
+        margin: 0 .2em
+        color: #da3c3f
+
     .stepper
       .title
         display: flex
