--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -8,7 +8,6 @@
 
     .thumbnail
       border-radius: 0
-      width: 50%
 
     code
       line-height: 2em
@@ -37,6 +36,7 @@
         font-weight: bold
         margin: 0 .2em
         color: #da3c3f
+        font-family: var(--font-family--default)
 
     .stepper
       .title
