--- a/static/css/partial/_base.sass
+++ b/static/css/partial/_base.sass
@@ -50,6 +50,9 @@ body
   .pb-3
     padding-bottom: 3em!important
 
+  .text-left
+    text-align: left
+
   img.thumbnail
     width: 100%
     border-radius: 20px
