--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,16 @@
         {% include navigation-bar.html %}
 
         <div class="post-detail contents-wrapper">
+            <span class="category-badge">{{ page.categories | first | upcase }}</span>
             <h2 class="title">{{ page.title }}</h2>
             <p class="date">{{ page.date | date: '%Y.%m.%d' }}</p>
             <div class="post-content mt-5">
                 {{ page.content }}
+            </div>
+            <div class="mt-3 text-left">
+                {% for tag in page.tags %}
+                <span class="tag"># {{ tag }} </span>
+                {% endfor %}
             </div>
         </div>
     </body>
