--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -35,7 +35,8 @@
       .language-plaintext
         font-weight: bold
         margin: 0 .2em
-        color: #da3c3f
+        color: #d14
+        font-size: .85em
         font-family: var(--font-family--default)
 
     .stepper
