--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -42,8 +42,8 @@
 
       &:hover
         opacity: 0.9
-      &:active
-        opacity: 0.95
+      &.active
+        opacity: 0.98
       &:before
         content: '■'
         font-size: .4em
