--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -5,8 +5,11 @@
         {% include navigation-bar.html %}
 
         <div class="contents-wrapper">
+            {% assign currentCategoryName = page.url | replace: '.html', '' | replace: '/', '' %}
             <section>
-                {{ page }}
+                <h2 class="section-title">
+                    {{ currentCategoryName }}
+                </h2>
             </section>
         </div>
     </body>
