--- a/static/css/partial/_post--list.sass
+++ b/static/css/partial/_post--list.sass
@@ -25,7 +25,12 @@
         &.thumbnail
           display: flex
 
+          .thumbnail-wrapper
+            .thumbnail
+              height: calc((100vw - 18em) * 0.18)
+
           li
+            width: 32%
             padding-left: 2em
 
             &:first-child
