--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -8,8 +8,23 @@
             {% assign currentCategoryName = page.url | replace: '.html', '' | replace: '/', '' %}
             <section>
                 <h2 class="section-title">
-                    {{ currentCategoryName }}
+                    {{ currentCategoryName | upcase }}
                 </h2>
+                <ul class="post-container text">
+                    {% for post in site.posts %}
+                    <li>
+                        <a href="{{ post.url }}" class="title">
+                            <span class="category-badge">{{ post.categories | first | upcase }}</span>
+                            {{ post.title }}
+                        </a>
+                        <div class="mt-1">
+                            {% for tag in post.tags limit: 4 %}
+                            <span class="tag"># {{ tag }} </span>
+                            {% endfor %}
+                        </div>
+                    </li>
+                    {% endfor %}
+                </ul>
             </section>
         </div>
     </body>
