--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     {% include head.html %}
-    <body class="{{ site.custom-theme }} {{ page.layout }} container">
+
+    {% assign layoutName = page.layout | slice: 0, 11 %}
+    {% assign contentsType = page.layout | slice: 13, page.layout.size %}
+
+    <body class="{{ layoutName }} {{ site.custom-theme }} {{ contentsType }} container">
         {% include navigation-bar.html %}
 
-        <div class="post-detail contents-wrapper">
+        <div class="contents-wrapper">
             <span class="category-badge">{{ page.categories | first | upcase }}</span>
             <h2 class="title">{{ page.title }}</h2>
             <p class="date">{{ page.date | date: '%Y.%m.%d' }}</p>
