--- a/_includes/navigation-bar.html
+++ b/_includes/navigation-bar.html
@@ -1,4 +1,4 @@
-<div class="navigation-bar">
+<div class="navigation-bar default">
     <section class="mt-3">
         <h1 class="title">
             <a href="/">
@@ -33,4 +33,14 @@
             {% endfor %}
         </div>
     </section>
+</div>
+<div class="navigation-bar mobile">
+    <h5 class="title">
+        <a href="/">
+            {{ site.title }}
+        </a>
+    </h5>
+    <!--    <button type="button" class="btn-menu">-->
+    <!--        <i class="fa fa-bars"></i>-->
+    <!--    </button>-->
 </div>
