--- a/static/css/partial/_post--detail.sass
+++ b/static/css/partial/_post--detail.sass
@@ -22,6 +22,8 @@
       .language-yaml
         .na, .pi
           color: #ff5722
+        .c1
+          color: #4caf50
 
       .language-html
         code
@@ -94,3 +96,10 @@
     &.text
       .thumbnail
         width: 70%
+
+@media screen and (max-width: 768px)
+  .container
+    &.post-detail
+      &.text
+        .thumbnail
+          width: 100%
