--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -17,7 +17,7 @@
                             <span class="category-badge">{{ post.categories | first | upcase }}</span>
                             {{ post.title }}
                         </a>
-                        <div class="mt-1">
+                        <div>
                             {% for tag in post.tags limit: 4 %}
                             <span class="tag"># {{ tag }} </span>
                             {% endfor %}
