--- a/static/css/partial/_navigation-bar.sass
+++ b/static/css/partial/_navigation-bar.sass
@@ -71,23 +71,37 @@
       display: none
 
     &.mobile
-      display: flex
-      justify-content: space-between
-      align-items: center
-      padding: .5em 0
+      display: block
       position: fixed
       top: 0
       width: 100%
       z-index: 1
 
-      .title
-        margin: 0
-        margin-left: 2em
+      .header
+        display: flex
+        justify-content: space-between
+        align-items: center
+        padding: .5em 0
 
-      .btn-menu
-        margin-right: .5em
-        background: transparent
-        border: none
-        font-size: 1.4em
-        color: var(--font-color--nav-title)
-        opacity: .9
+        .title
+          margin: 0
+          margin-left: 2em
+
+        .btn-menu
+          margin-right: .5em
+          background: transparent
+          border: none
+          font-size: 1.4em
+          color: var(--font-color--nav-title)
+          opacity: .9
+
+
+      .category-container
+        background: var(--background-color--default)
+        box-shadow: 0px 5px 5px #00000008
+        display: none
+
+        a
+          font-size: 1em
+          color: var(--font-color--default)
+          justify-content: left
