--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
             &middot; {{ page.title }}
         {% endif %}
     </title>
-    <meta name="description" content="{{ page.title | default: site.description }}">
+    {% seo %}
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/index.css">
